--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <fastjson.version>2.0.51</fastjson.version>
         <hutool-5.version>5.8.29</hutool-5.version>
         <hutool-5.version>5.8.29</hutool-5.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <dependencies>
 
